--- a/vawc-deskhub/package.json
+++ b/vawc-deskhub/package.json
@@ -16,6 +16,7 @@
     "@material-tailwind/react": "^2.1.10",
     "@mui/material": "^7.3.4",
     "@tailwindcss/vite": "^4.1.14",
+    "@tanstack/react-query": "^5.90.2",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-router-dom": "^7.9.3",
