--- a/vawc-deskhub/package.json
+++ b/vawc-deskhub/package.json
@@ -17,10 +17,12 @@
     "@mui/material": "^7.3.4",
     "@tailwindcss/vite": "^4.1.14",
     "@tanstack/react-query": "^5.90.2",
+    "jspdf": "^3.0.4",
     "lucide-react": "^0.554.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-router-dom": "^7.9.3",
+    "recharts": "^3.5.1",
     "tailwindcss": "^4.1.14",
     "validator": "^13.15.23"
   },
